crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_content.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: snapshot_attrs(&both_api.content_attrs())
---
data-ars-part=content
data-ars-scope=scroll-area
