crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_corner_square.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: snapshot_attrs(&both_api.corner_square_attrs())
---
data-ars-part=corner-square
data-ars-scope=scroll-area
data-ars-visible=true
role=none
