crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_root_idle.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: snapshot_attrs(&both_api.root_attrs())
---
data-ars-overflow-x=true
data-ars-overflow-y=true
data-ars-part=root
data-ars-scope=scroll-area
data-ars-state=idle
