crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_root_scroll_active.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: "snapshot_attrs(&scroll_active.connect(&|_| {}).root_attrs())"
---
data-ars-overflow-x=false
data-ars-overflow-y=true
data-ars-part=root
data-ars-scope=scroll-area
data-ars-state=scroll-active
