crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_scrollbar_x_hidden.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: "snapshot_attrs(&scroll_active.connect(&|_| {}).scrollbar_x_attrs())"
---
aria-orientation=horizontal
data-ars-part=scrollbar-x
data-ars-scope=scroll-area
data-ars-visible=false
role=none
