crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_scrollbar_x_visible.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: snapshot_attrs(&both_api.scrollbar_x_attrs())
---
data-ars-orientation=horizontal
data-ars-part=scrollbar-x
data-ars-scope=scroll-area
data-ars-visible=true
role=none
