crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_scrollbar_y_visible.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: snapshot_attrs(&both_api.scrollbar_y_attrs())
---
aria-orientation=vertical
data-ars-part=scrollbar-y
data-ars-scope=scroll-area
data-ars-visible=true
role=none
