crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_thumb_y.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: snapshot_attrs(&both_api.thumb_y_attrs())
---
data-ars-part=thumb-y
data-ars-scope=scroll-area
role=none
