crates/ars-components/src/layout/scroll_area/snapshots/ars_components__layout__scroll_area__tests__scroll_area_viewport_custom_label.snap
---
source: crates/ars-components/src/layout/scroll_area/mod.rs
expression: "snapshot_attrs(&custom_label.connect(&|_| {}).viewport_attrs())"
---
aria-label=Activity log
data-ars-part=viewport
data-ars-scope=scroll-area
role=region
tabindex=0
